projects/vb6parse/snapshots/parsers/cst/expressions/unary_negation.snap
---
source: projects/vb6parse/tests/expressions.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: UnaryExpression
          children:
            - kind: SubtractionOperator
              text: "-"
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "5"
        - kind: Newline
          text: "\n"
